feat: finish auth and projects modules
- Add pending handlers and api routes to auth domain
- Finish core projects domain using best practices for Golang backend apps
- Update Swag to v1.16.6
- Update OAS specification
- Add support for cookies in auth routes
